# ansible-sd-cuda

./: Makefile  README.md  pyproject.toml
ansible/: automatic1111.yaml  conda.yaml  cuda copy.yaml  cuda.yaml  pyenv.yaml
ansible/templates/: activate.j2  pyenv.sh.j2  sd-conda-legacy.yaml.j2  sd-conda.yaml.j2  webui-user.sh.j2
multipass/: ansible.id_rsa  ansible.id_rsa.pub  cloud-init.yaml
